networking finish, RMI start

--- a/files/documentation.html
+++ b/files/documentation.html
@@ -52,7 +52,11 @@ dragonPosition
 timeInSeconds
 </li><li>javafx.animation.Timeline
 timeline
-</li></ul><h2>hr.algebra.javatwo.GameApplication</h2><ul></ul><h2>hr.algebra.javatwo.model.ClankColor</h2><ul><li>hr.algebra.javatwo.model.ClankColor
+</li></ul><h2>hr.algebra.javatwo.GameApplication</h2><ul><li>hr.algebra.javatwo.model.RoleName
+loggedInRoleName
+</li><li>hr.algebra.javatwo.controller.GameController
+controller
+</li></ul><h2>hr.algebra.javatwo.model.ClankColor</h2><ul><li>hr.algebra.javatwo.model.ClankColor
 D
 </li><li>hr.algebra.javatwo.model.ClankColor
 R
@@ -98,5 +102,15 @@ node
 row
 </li><li>int
 col
-</li></ul><h2>hr.algebra.javatwo.utils.DialogUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.DocumentationUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.FileUtils</h2><ul></ul></body>
+</li></ul><h2>hr.algebra.javatwo.model.NetworkConfiguration</h2><ul><li>java.lang.Integer
+PORT
+</li><li>java.lang.String
+HOST
+</li></ul><h2>hr.algebra.javatwo.model.RoleName</h2><ul><li>hr.algebra.javatwo.model.RoleName
+SERVER
+</li><li>hr.algebra.javatwo.model.RoleName
+CLIENT
+</li><li>hr.algebra.javatwo.model.RoleName[]
+$VALUES
+</li></ul><h2>hr.algebra.javatwo.utils.DialogUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.DocumentationUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.FileUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.GameStateUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.GameUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.NetworkingUtils</h2><ul></ul></body>
 </html>
