--- a/files/documentation.html
+++ b/files/documentation.html
@@ -6,7 +6,11 @@
 <body>
 
 
-<h2>hr.algebra.javatwo.controller.GameController$1</h2><ul><li>int[]
+<h2>hr.algebra.javatwo.chat.service.RemoteChatService</h2><ul><li>java.lang.String
+REMOTE_CHAT_OBJECT_NAME
+</li></ul><h2>hr.algebra.javatwo.chat.service.RemoteChatServiceImpl</h2><ul><li>java.util.List
+chatMessages
+</li></ul><h2>hr.algebra.javatwo.controller.GameController$1</h2><ul><li>int[]
 $SwitchMap$hr$algebra$javatwo$model$ClankColor
 </li></ul><h2>hr.algebra.javatwo.controller.GameController</h2><ul><li>javafx.scene.control.Button
 stepButton
@@ -40,6 +44,10 @@ bagPane
 timerLabel
 </li><li>javafx.scene.control.Label
 playerLabel
+</li><li>javafx.scene.control.TextField
+chatMessageTextField
+</li><li>javafx.scene.text.TextFlow
+chatMessagesTextFlow
 </li><li>boolean
 redPlayerTurn
 </li><li>java.util.List
@@ -50,9 +58,11 @@ clank
 dragonPosition
 </li><li>int
 timeInSeconds
+</li><li>java.lang.String
+winner
 </li><li>javafx.animation.Timeline
 timeline
-</li></ul><h2>hr.algebra.javatwo.GameApplication</h2><ul><li>hr.algebra.javatwo.model.RoleName
+</li></ul><h2>hr.algebra.javatwo.expection.InvalidConfigurationKeyException</h2><ul></ul><h2>hr.algebra.javatwo.GameApplication</h2><ul><li>hr.algebra.javatwo.model.RoleName
 loggedInRoleName
 </li><li>hr.algebra.javatwo.controller.GameController
 controller
@@ -64,6 +74,24 @@ R
 B
 </li><li>hr.algebra.javatwo.model.ClankColor[]
 $VALUES
+</li></ul><h2>hr.algebra.javatwo.model.ConfigurationKey</h2><ul><li>hr.algebra.javatwo.model.ConfigurationKey
+HOST
+</li><li>hr.algebra.javatwo.model.ConfigurationKey
+SERVER_PORT
+</li><li>hr.algebra.javatwo.model.ConfigurationKey
+CLIENT_PORT
+</li><li>hr.algebra.javatwo.model.ConfigurationKey
+RMI_PORT
+</li><li>hr.algebra.javatwo.model.ConfigurationKey
+RANDOM_PORT_HINT
+</li><li>java.lang.String
+keyName
+</li><li>hr.algebra.javatwo.model.ConfigurationKey[]
+$VALUES
+</li></ul><h2>hr.algebra.javatwo.model.ConfigurationReader</h2><ul><li>hr.algebra.javatwo.model.ConfigurationReader
+reader
+</li><li>java.util.Hashtable
+environment
 </li></ul><h2>hr.algebra.javatwo.model.Constants</h2><ul><li>int
 NUM_DRAGONS
 </li><li>int
@@ -94,6 +122,8 @@ blueLives
 dragonPosition
 </li><li>java.lang.String
 lastStep
+</li><li>java.lang.String
+winner
 </li></ul><h2>hr.algebra.javatwo.model.GridCell</h2><ul><li>long
 serialVersionUID
 </li><li>java.lang.String
@@ -102,15 +132,19 @@ node
 row
 </li><li>int
 col
-</li></ul><h2>hr.algebra.javatwo.model.NetworkConfiguration</h2><ul><li>java.lang.Integer
-PORT
-</li><li>java.lang.String
-HOST
-</li></ul><h2>hr.algebra.javatwo.model.RoleName</h2><ul><li>hr.algebra.javatwo.model.RoleName
+</li></ul><h2>hr.algebra.javatwo.model.InitialDirContextCloseable</h2><ul></ul><h2>hr.algebra.javatwo.model.NetworkConfiguration</h2><ul></ul><h2>hr.algebra.javatwo.model.RoleName</h2><ul><li>hr.algebra.javatwo.model.RoleName
 SERVER
 </li><li>hr.algebra.javatwo.model.RoleName
 CLIENT
 </li><li>hr.algebra.javatwo.model.RoleName[]
 $VALUES
-</li></ul><h2>hr.algebra.javatwo.utils.DialogUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.DocumentationUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.FileUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.GameStateUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.GameUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.NetworkingUtils</h2><ul></ul></body>
+</li></ul><h2>hr.algebra.javatwo.utils.ChatUtils</h2><ul><li>hr.algebra.javatwo.chat.service.RemoteChatService
+remoteChatService
+</li><li>java.lang.Integer
+rmiPort
+</li></ul><h2>hr.algebra.javatwo.utils.DialogUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.DocumentationUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.FileUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.GameStateUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.GameUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.NetworkingUtils</h2><ul><li>java.lang.String
+host
+</li></ul><h2>hr.algebra.javatwo.utils.RmiUtils</h2><ul><li>java.lang.Integer
+rmiPort
+</li></ul></body>
 </html>
