--- a/files/documentation.html
+++ b/files/documentation.html
@@ -11,6 +11,8 @@ REMOTE_CHAT_OBJECT_NAME
 </li></ul><h2>hr.algebra.javatwo.chat.service.RemoteChatServiceImpl</h2><ul><li>java.util.List
 chatMessages
 </li></ul><h2>hr.algebra.javatwo.controller.GameController$1</h2><ul><li>int[]
+$SwitchMap$hr$algebra$javatwo$model$RoleName
+</li><li>int[]
 $SwitchMap$hr$algebra$javatwo$model$ClankColor
 </li></ul><h2>hr.algebra.javatwo.controller.GameController</h2><ul><li>javafx.scene.control.Button
 stepButton
@@ -20,10 +22,20 @@ useButton
 skipButton
 </li><li>javafx.scene.control.Button
 newGameButton
+</li><li>javafx.scene.control.Button
+sendButton
+</li><li>javafx.scene.control.Button
+replayButton
 </li><li>javafx.scene.control.Label
 redLivesLabel
 </li><li>javafx.scene.control.Label
 blueLivesLabel
+</li><li>javafx.scene.control.Label
+stepsLabel
+</li><li>javafx.scene.control.Label
+lastMoveLabel
+</li><li>javafx.scene.control.Label
+nextPlayerLabel
 </li><li>javafx.scene.image.ImageView
 redPlayerImage
 </li><li>javafx.scene.image.ImageView
@@ -33,35 +45,29 @@ dragonStepImage
 </li><li>javafx.scene.image.ImageView
 goldImage
 </li><li>javafx.scene.layout.GridPane
-boardGridPane
-</li><li>javafx.scene.layout.GridPane
 dragonStepGridPane
-</li><li>javafx.scene.layout.Pane
-clankPane
+</li><li>javafx.scene.layout.GridPane
+boardGridPane
 </li><li>javafx.scene.layout.Pane
 bagPane
-</li><li>javafx.scene.control.Label
-timerLabel
-</li><li>javafx.scene.control.Label
-playerLabel
+</li><li>javafx.scene.layout.Pane
+clankPane
 </li><li>javafx.scene.control.TextField
 chatMessageTextField
 </li><li>javafx.scene.text.TextFlow
 chatMessagesTextFlow
 </li><li>boolean
 redPlayerTurn
+</li><li>boolean
+goldShowed
 </li><li>java.util.List
 bag
 </li><li>java.util.List
 clank
 </li><li>int
 dragonPosition
-</li><li>int
-timeInSeconds
 </li><li>java.lang.String
 winner
-</li><li>javafx.animation.Timeline
-timeline
 </li></ul><h2>hr.algebra.javatwo.expection.InvalidConfigurationKeyException</h2><ul></ul><h2>hr.algebra.javatwo.GameApplication</h2><ul><li>hr.algebra.javatwo.model.RoleName
 loggedInRoleName
 </li><li>hr.algebra.javatwo.controller.GameController
@@ -97,23 +103,33 @@ NUM_DRAGONS
 </li><li>int
 NUM_DRAGONS_IN_BAG
 </li><li>int
-SHOW_GOLD_AFTER_SEC
+SHOW_GOLD_AFTER_STEPS
 </li><li>int
 NUM_LIVES
 </li><li>java.lang.String
 FILE_NAME
+</li></ul><h2>hr.algebra.javatwo.model.GameMove</h2><ul><li>long
+serialVersionUID
+</li><li>boolean
+isRedTurn
+</li><li>int
+step
+</li><li>java.time.LocalDateTime
+dateTime
 </li></ul><h2>hr.algebra.javatwo.model.GameState</h2><ul><li>long
 serialVersionUID
 </li><li>java.util.List
 gameBoardState
 </li><li>int
-timeInSeconds
+stepsToShowGold
 </li><li>java.util.List
 bag
 </li><li>java.util.List
 clank
 </li><li>boolean
 redPlayerTurn
+</li><li>boolean
+goldShowed
 </li><li>java.lang.String
 redLives
 </li><li>java.lang.String
@@ -132,19 +148,31 @@ node
 row
 </li><li>int
 col
-</li></ul><h2>hr.algebra.javatwo.model.InitialDirContextCloseable</h2><ul></ul><h2>hr.algebra.javatwo.model.NetworkConfiguration</h2><ul></ul><h2>hr.algebra.javatwo.model.RoleName</h2><ul><li>hr.algebra.javatwo.model.RoleName
+</li></ul><h2>hr.algebra.javatwo.model.InitialDirContextCloseable</h2><ul></ul><h2>hr.algebra.javatwo.model.RoleName</h2><ul><li>hr.algebra.javatwo.model.RoleName
 SERVER
 </li><li>hr.algebra.javatwo.model.RoleName
 CLIENT
+</li><li>hr.algebra.javatwo.model.RoleName
+SINGLE_PLAYER
 </li><li>hr.algebra.javatwo.model.RoleName[]
 $VALUES
+</li></ul><h2>hr.algebra.javatwo.Threads.GameMoveThread</h2><ul><li>java.lang.String
+GAME_MOVES_FILE
+</li><li>boolean
+fileAccessInProgress
+</li></ul><h2>hr.algebra.javatwo.Threads.GetLastMoveThread</h2><ul><li>javafx.scene.control.Label
+lastMoveLabel
+</li></ul><h2>hr.algebra.javatwo.Threads.SaveGameMoveThread</h2><ul><li>hr.algebra.javatwo.model.GameMove
+gameMove
 </li></ul><h2>hr.algebra.javatwo.utils.ChatUtils</h2><ul><li>hr.algebra.javatwo.chat.service.RemoteChatService
 remoteChatService
-</li><li>java.lang.Integer
+</li><li>int
 rmiPort
 </li></ul><h2>hr.algebra.javatwo.utils.DialogUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.DocumentationUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.FileUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.GameStateUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.GameUtils</h2><ul></ul><h2>hr.algebra.javatwo.utils.NetworkingUtils</h2><ul><li>java.lang.String
 host
 </li></ul><h2>hr.algebra.javatwo.utils.RmiUtils</h2><ul><li>java.lang.Integer
 rmiPort
+</li></ul><h2>hr.algebra.javatwo.utils.XmlUtils</h2><ul><li>java.lang.String
+FILENAME
 </li></ul></body>
 </html>
